feat: remover configuracoes e perguntas anonimas
